Also use the "move" icon for "Relative to Parent"
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=928138

--- a/qcachegrind/qcachegrind.qrc
+++ b/qcachegrind/qcachegrind.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
   <file alias="percent.png">../pics/hicolor/hi32-action-percent.png</file>
+  <file alias="move.png">../pics/hicolor/hi22-action-move.png</file>
   <file alias="app.png">../kcachegrind/hi48-app-kcachegrind.png</file>
 </qresource>
 </RCC>
